--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ autopep8==1.6.0
 beautifulsoup4==4.10.0
 dj-database-url==0.5.0
 Django==2.1.15
-django-bootstrap-form==3.4
-django-bootstrap4==3.0.1
+django-bootstrap-form
+django-bootstrap4
 django-rest-framework==0.1.0
-djangorestframework==3.12.4
+djangorestframework
 Pillow==8.3.1
 python-dateutil==1.5
 python-decouple==3.5
